# stem-mixer-app

./: .gitignore  LICENSE  README.md  README_ANDROID.md  export_model.py
cloud_backend/: app.py  requirements.txt
core_engine/: CMakeLists.txt
core_engine/include/: AudioDecoder.h  AudioEncoder.h  DemucsInference.h  bridge.h
core_engine/src/: AudioDecoder.cpp  AudioEncoder.cpp  DemucsInference.cpp  bridge.cpp  main.cpp
model_builder/: export_model.py
stem_ui/: README.md  build_lite.sh  pubspec.yaml
stem_ui/android/app/: build.gradle.kts
stem_ui/android/app/src/main/: AndroidManifest.xml
stem_ui/android/app/src/main/res/xml/: network_security_config.xml
stem_ui/ios/Runner/: Info.plist
stem_ui/ios/Runner.xcodeproj/: project.pbxproj
stem_ui/lib/: main.dart  mixer_screen.dart
stem_ui/lib/core/: cloud_api.dart  engine_binding.dart  mixer_controller.dart  model_manager.dart
stem_ui/linux/: CMakeLists.txt
stem_ui/linux/runner/: my_application.cc
stem_ui/test/: widget_test.dart
